# AMR_Robot_1

./: README.md
install/: setup.bash  setup.ps1
install/all_in/share/all_in/: package.bash  package.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: group_fast_sync_read.h  packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.sh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  package.xml
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.zsh  package.sh
install/main/lib/main/: ROS2Publisher  encoder_joint_state_publisher
src/main/: fake_robot.py  setup.cfg  setup.py
src/main/Topic_python/: cmd_vel.py  joint_states.py
src/main/UI/: test.ui
src/main/install/: local_setup.sh  setup.bash  setup.ps1
src/main/log/: latest_build
turtlebot3_ws/: Navi.sh  all_in_one.sh
turtlebot3_ws/install/: local_setup.sh  setup.sh  setup.zsh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws/src/log/: latest_build
turtlebot3_ws/src/main/: main.py  package.xml  test.ui
turtlebot3_ws/src/main/Design_Frame/: realtime_chart.py
turtlebot3_ws/src/main/config/: mapper_params_online_async.yaml
turtlebot3_ws/src/main/install/: setup.sh  setup.zsh
turtlebot3_ws/src/main/install/main/lib/main/: cmd_vel  cmd_vel_publisher  odom  odom_publisher  odom_tf_broadcaster
turtlebot3_ws/src/main/install/main/share/main/: package.sh
(+851 files in other folders)
