<?xml version="1.0"?>
<package format="3">
  <name>main</name>
  <version>0.0.1</version>
  <description>Python-based GUI and motor control for AMR (ROS2 Humble)</description>
  <maintainer email="hoan@example.com">Hoan Pham</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
